SelectionListModel: Fix use after free

Calling InputEngine::setInputMethod(null) did not clear the pointer
value stored in SelectionListModelPrivate.

Also, in case the input method is destroyed without setting it null,
prevent use of dangling pointer in selection list model by using
QPointer.

Task-number: QTBUG-61308
Change-Id: If340d99a63489c54414497c61cd482e06a21c5ee
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>